namespace ConnectFour.Types;

public enum PlayerType
{
    UserPlayer,
    MachinePlayer
}
